--- a/app/views/custom_message_settings/_messages.html.erb
+++ b/app/views/custom_message_settings/_messages.html.erb
@@ -1,10 +1,10 @@
 <div>
-  <%= select_tag 'select-key', available_message_options(@setting, lang, @project&.identifier), id: 'key-selector' %>
+  <%= select_tag 'select-key', available_message_options(@setting, lang, @project), id: 'key-selector' %>
   <span class='icon icon-help'><%= l(:text_description_of_search_box) %></span>
 </div>
 <br>
 <div class='tabular'>
-  <%= normal_mode_input_fields(@setting, lang, @project&.identifier) %>
+  <%= normal_mode_input_fields(@setting, lang, @project) %>
 </div>
 
 <%= javascript_tag do %>
