--- a/app/views/custom_message_settings/_yaml_tab.html.erb
+++ b/app/views/custom_message_settings/_yaml_tab.html.erb
@@ -8,6 +8,6 @@
     <p><%= l(:text_placeholder_template_case) %></p>
     <pre><%= l(:text_placeholder_yaml_template) %></pre>
   </div>
-  <%= text_area_tag 'settings[custom_messages_yaml]', @setting.custom_messages_to_yaml(@project&.identifier), rows: '30', style: 'width: 100%', placeholder: l(:text_placeholder_yaml_template) %>
+  <%= text_area_tag 'settings[custom_messages_yaml]', @setting.custom_messages_to_yaml(@project), rows: '30', style: 'width: 100%', placeholder: l(:text_placeholder_yaml_template) %>
   <%= submit_tag l(:button_save) %>
 <% end %>
